--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div class="link">
                     <h3>Cuentanos tu experiencia</h3>
                     <form action="https://formsubmit.co/planetariodigitaldechimalhuaca@gmail.com" method="post">
-                        <input type="text" name="user" placeholder="Nombre" class="inp">
+                        <input type="text" name="name" placeholder="Nombre" class="inp">
                         <input type="email" name="email" placeholder="Correo" class="inp">
                         <textarea class="inp" name="subject"></textarea>
                         <input class="btn-4" type="submit" name="send" value="Enviar">            
