--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         <input class="btn-4" type="submit" name="send" value="Enviar">            
                         
                         <input type="hidden" name="_next" value="https://planetariochimalhuacan.github.io/planetariochimalhuacan/">
-                        <!--input type="hidden" name="_captcha" value="false"-->
+                        <input type="hidden" name="_captcha" value="false">
                     </form>
                 </div>
 
