--- a/php/sugerencias/index.html
+++ b/php/sugerencias/index.html
@@ -19,7 +19,7 @@
 
         <input type="hidden" name="_autoresponse" value="Tus comentarios nos importan, proximamente le tendremos una respuesta.">
         <input type="hidden" name="_next" value="https://planetariochimalhuacan.github.io/planetariochimalhuacan/">
-        <!--input type="hidden" name="_captcha" value="false"-->
+        <input type="hidden" name="_captcha" value="false">
     </form>
     <script src="../../repositorios/source/lock.js"></script>
 </body>
