--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
 
             <div class="services-1" style="position: relative;">
-                <div onclick="play()" style="position: absolute; top: 0; left: 0; width: 100%; height: 400px; cursor: pointer; z-index: 1;"></div>
+                <div onclick="redirectToPage10()" style="position: absolute; top: 0; left: 0; width: 100%; height: 400px; cursor: pointer; z-index: 1;"></div>
                 <iframe src="repositorios/Planet/" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 <h3><a href="rooms/Funciones/" class="logo">Funcion De Domo</a></h3>
             </div>
