--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     </header>
 
     <main class="services container">
+        
+        <span>Ultima Actualización 1 Agosto de 2024</span>
         <h2 id="Services">Nuestras Salas</h2>
 
         <div class="services-content">
