--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 Hemos dieseñado un mapa interactivo con realidad aumentada para que
                 tengas una experiencia similar a la del planetario 
            </p>
-            <a href="rooms/maps/Maps.html" class="btn-2">Acceder al mapa</a>            
+            <a href="https://planetariodigitalchimalhuacan.netlify.app/tour" class="btn-2">Acceder al mapa</a>            
         </div>
     
        <div class="general-1">
