--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
             <span class="close">&times;</span>
             <h2>¡Descarga nuestro Juego!</h2>
             <p>Disfruta de una mejor experiencia con nuestra aplicación móvil.</p>
+             <img class="menu-icono" src="https://urieltgc.github.io/images/games.png">
             <p><br>Disponible solo para dispositivos moviles android.</p>
             <a href="https://drive.google.com/uc?export=download&id=1jMWILGm742PieC2bY7i-2ZsKAHtN0fsv" class="download-button">Descargar</a>
         </div>
